# DependencyWalker

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  pe_utils.cpp  pe_utils.h
tools/: bootstrap_cmake.ps1  bootstrap_mingw.ps1  build_release.cmd  configure_vs2022_x64.cmd  run_cmake.cmd
tools/cmake/cmake-4.1.2-windows-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
tools/cmake/cmake-4.1.2-windows-x86_64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_instrumentation.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  (+108 more)
tools/cmake/cmake-4.1.2-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
tools/cmake/cmake-4.1.2-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-instrumentation.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
(+2030 files in other folders)
